# unsupervised-cellular-phenotyping

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  dockerfile  main.py  pyproject.toml  requirements.txt
data/: TCGA-V~1.GEO
report/: report.md
report/results/cluster_analysis/: contingency_table.csv  metrics.json  per_cluster_stats.csv
src/: logging_config.py
src/clustering/: clustering.py
src/data/: tiling.py  wsi_reader.py
src/embedding/: embedding_extraction.py
src/models/: __init__.py  cellvit_hibou_wrapper.py
src/utils/: cluster_analysis.py  geojson_export.py  reproducibility.py  roi_visualization.py
