[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "unsupervised_cellular_phenotyping"  
requires-python = ">=3.9"
description = "Install repo as a top-level package"
dynamic = ["version"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.version]
source = "vcs"