[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unsupervised_cellular_phenotyping"
version = "0.1.0"              
requires-python = ">=3.9"
description = "Install repo as a top-level package"

[tool.hatch.build.targets.wheel]
include = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]